--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
-  font-family: 'Times New Roman' sans-serif;
+  font-family: 'Times New Roman';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+[class*='-container'] {
+  max-width: 730px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
