--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: 'Times New Roman';
@@ -14,7 +20,7 @@ code {
 }
 
 [class*='-container'] {
-  max-width: 730px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 0 15px;
 }
